Updated Version Number & Changelog

--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,9 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.0.0</td><td class="current">Updated extension to work with new PowerSchool. <br>Redesigned GPA calculation, should be faster. <br>Added more PowerSchool styling.</td>
+					<td class="head current">Current: 1.1.0</td><td class="current">Moved schedule to grades page. Styled schedule to make it look better.</tr>
+				<tr>
+					<td class="head">1.0.0</td><td>Updated extension to work with new PowerSchool. <br>Redesigned GPA calculation, should be faster. <br>Added more PowerSchool styling.</td>
 				</tr>
 				<tr>
 					<td class="head">0.9.8</td><td>Fixed GPA calculation when having an "F"</td>
