--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,13 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.1.0</td><td class="current">Moved schedule to grades page. Styled schedule to make it look better.</tr>
+					<td class="head current">Current: 1.2.0</td><td class="current">Fixed GPA calculation for S2. Now shows S1 GPA and semester GPA.</tr>
+				<tr>
+				<tr>
+					<td class="head">Current: 1.1.1</td><td>Updated for S2</tr>
+				<tr>
+				<tr>
+					<td class="head">Current: 1.1.0</td><td>Moved schedule to grades page. Styled schedule to make it look better.</tr>
 				<tr>
 					<td class="head">1.0.0</td><td>Updated extension to work with new PowerSchool. <br>Redesigned GPA calculation, should be faster. <br>Added more PowerSchool styling.</td>
 				</tr>
