Rearranged shown GPA

--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,7 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.2.2</td><td class="current">Fixed minor visual errors.</tr>
+					<td class="head current">Current: 1.2.2</td><td class="current">Reorganized GPA displayed. Fixed minor visual errors.</tr>
 				</tr>
 				<tr>
 					<td class="head">1.2.1</td><td>Fixed GPA calculation in certain one-semester weighted courses. Corrected minor code issues.</tr>
