--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,16 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.2.2</td><td class="current">Reorganized GPA displayed. Fixed minor visual errors.</tr>
+					<td class="head current">Current: 1.3.0</td><td class="current">Fixed 2016-2017 GPA Calculation. Rewrote algorithm, made gpa.js more classy.</tr>
+				</tr>
+				<tr>
+					<td class="head">1.2.5</td><td>2016-2017 S1 Update</tr>
+				</tr>
+				<tr>
+					<td class="head">1.2.3</td><td>Fixed GPA calculation issues due to website update.</tr>
+				</tr>
+				<tr>
+					<td class="head">1.2.2</td><td>Reorganized GPA displayed. Fixed minor visual errors.</tr>
 				</tr>
 				<tr>
 					<td class="head">1.2.1</td><td>Fixed GPA calculation in certain one-semester weighted courses. Corrected minor code issues.</tr>
