--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,16 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.3.0</td><td class="current">Fixed 2016-2017 GPA Calculation. Rewrote algorithm, made gpa.js more classy.</tr>
+					<td class="head current">Current: 1.3.4</td><td class="current">S2 Update</tr>
+				</tr>
+				<tr>
+					<td class="head">1.3.3</td><td>Fix due to PS update</tr>
+				</tr>
+				<tr>
+					<td class="head">1.3.2</td><td>Extension Hotfix</tr>
+				</tr>
+				<tr>
+					<td class="head">1.3.0</td><td>Fixed 2016-2017 GPA Calculation. Rewrote algorithm, made gpa.js more classy.</tr>
 				</tr>
 				<tr>
 					<td class="head">1.2.5</td><td>2016-2017 S1 Update</tr>
