Fix PS Bold Update

--- a/src/popup.html
+++ b/src/popup.html
@@ -38,7 +38,10 @@
 			<span class="title">Changelog:</span>
 			<table border="1">
 				<tr>
-					<td class="head current">Current: 1.3.4</td><td class="current">S2 Update</tr>
+					<td class="head current">Current: 1.3.5</td><td class="current">Fixing PS "Bold" Update</tr>
+				</tr>
+				<tr>
+					<td class="head">1.3.4</td><td>S2 Update</tr>
 				</tr>
 				<tr>
 					<td class="head">1.3.3</td><td>Fix due to PS update</tr>
