--- a/src/popup.html
+++ b/src/popup.html
@@ -3,13 +3,12 @@
     <style>table{border-collapse:collapse}td{line-height:150%;padding:4;border:1px solid #000}</style>
 </header>
 <h1 align=center>PowerSchool Enhancer Changelog</h1>
-<h3 align=center>Created by Judge Madan and Ben Siraphob</h3>
 <h4 align=center>Source avaliable on <a href=https://goo.gl/1rDaV9>GitHub</a>.</h4>
 <div>
     <table cellspacing=2>
         <tr>
             <td class="head current">1.3.6
-                <td class=current>Code cleanups & optimizations.
+                <td class=current>Code cleanups & optimizations. Fixed issue for certain older versions of chrome.
                     <tr>
                     <td class=head>1.3.5
                     <td>Fixing PS "Bold" Update.
