--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
     <style>table{border-collapse:collapse}td{line-height:150%;padding:4;border:1px solid #000}</style>
 </header>
 <h1 align=center>PowerSchool Enhancer Changelog</h1>
-<h4 align=center>Source avaliable on <a href=https://goo.gl/1rDaV9>GitHub</a>.</h4>
+<h4 align=center>Source avaliable on <a href="https://goo.gl/1rDaV9">GitHub</a>.</h4>
 <div>
     <table cellspacing=2>
         <tr>
