--- a/src/popup.html
+++ b/src/popup.html
@@ -1,14 +1,18 @@
+<head><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"></head>
 <header>
     <style>body{font-family:Roboto;min-width:180px}div{text-align:center}tr td{font-size:12.5px}.head{text-align:center}.current{border:solid}</style>
     <style>table{border-collapse:collapse}td{line-height:150%;padding:4;border:1px solid #000}</style>
 </header>
 <h1 align=center>PowerSchool Enhancer Changelog</h1>
-<h4 align=center>Source avaliable on <a href="https://goo.gl/1rDaV9">GitHub</a>.</h4>
+<h4 align=center>Source avaliable on <a href="https://goo.gl/1rDaV9" target="_blank">GitHub</a>.</h4>
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.3.6
-                <td class=current>Code cleanups & optimizations. Fixed issue for certain older versions of chrome.
+            <td class="head current">1.3.7
+                <td class=current>Minor usability tweaks
+                    <tr>
+                    <td class=head>1.3.6
+                    <td>Fix issue where null grades would be referenced.
                     <tr>
                     <td class=head>1.3.5
                     <td>Fixing PS "Bold" Update.
@@ -59,7 +63,7 @@
                     <td>GPA Calculation hotfix.
                     <tr>
                     <td class=head>0.9.5
-                    <td>Redesigned GPA calculation algorithm & parsing. Fixes all previous issues with GPA calculation including non-integral grades breaking the program.
+                    <td>Redesigned GPA calculation algorithm &amp; parsing. Fixes all previous issues with GPA calculation including non-integral grades breaking the program.
                     <tr>
                     <td class=head>0.9.0
                     <td>Styled PowerSchool home page.
@@ -74,13 +78,13 @@
                     <td>Moved GPA back to original place. Addition of Enhanced Schedule.
                     <tr>
                     <td class=head>0.4.1
-                    <td>Added support for showing S1 & S2 GPA at the same time while in S2. Works on all PowerSchool Guardian pages now. Fixed PowerSchool mispelling.
+                    <td>Added support for showing S1 &amp; S2 GPA at the same time while in S2. Works on all PowerSchool Guardian pages now. Fixed PowerSchool mispelling.
                     <tr>
                     <td class=head>0.3.3
                     <td>Public Release: Stylized GPA.
                     <tr>
                     <td class=head>0.3.2
-                    <td>Fixed bug with algorithm that mixes up S1 &' 2 GPA
+                    <td>Fixed bug with algorithm that mixes up S1 &amp; 2 GPA
                     <tr>
                     <td class=head>0.3.1
                     <td>Fixed bug that made 100% grade look like 0%.
