--- a/src/popup.html
+++ b/src/popup.html
@@ -9,7 +9,10 @@
     <table cellspacing=2>
         <tr>
             <td class="head current">1.3.7
-                <td class=current>Minor usability tweaks
+                <td class=current>Added percentages
+                    <tr>
+                    <td class=head>1.3.7
+                    <td>Minor usability tweaks
                     <tr>
                     <td class=head>1.3.6
                     <td>Fix issue where null grades would be referenced.
