--- a/src/popup.html
+++ b/src/popup.html
@@ -8,8 +8,11 @@
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.3.8
-                <td class=current>Added percentages
+            <td class="head current">1.3.9
+                <td class=current>Minor Visual Tweaks
+                    <tr>
+                    <td class=head>1.3.8
+                    <td>Added Percentages
                     <tr>
                     <td class=head>1.3.7
                     <td>Minor usability tweaks
