--- a/src/popup.html
+++ b/src/popup.html
@@ -8,8 +8,11 @@
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.3.10
-                <td class=current>Schedule preview implemented
+            <td class="head current">1.3.11
+                <td class=current>Allows display of notices without extension update
+                    <tr>
+                    <td class=head>1.3.10
+                    <td>Schedule preview implemented
                     <tr>
                     <td class=head>1.3.9
                     <td>Minor Visual Tweaks
