Revert "Scheduling display updates"
This reverts commit 8613cc1b86f27e0a6cf1c9696d7af89e33265b3c.

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,11 +8,8 @@
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.4.0
-                <td class=current>Fixed schedule display errors
-                    <tr>
-                    <td class=head>1.3.11
-                    <td>Allows display of notices without extension update
+            <td class="head current">1.3.11
+                <td class=current>Allows display of notices without extension update
                     <tr>
                     <td class=head>1.3.10
                     <td>Schedule preview implemented
