--- a/src/popup.html
+++ b/src/popup.html
@@ -8,14 +8,8 @@
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.4.0
-                <td class=current>Updated schedule display; percentages function deprecated
-                    <tr>
-                    <td class=head>1.3.11
-                    <td>Allows display of notices without extension update
-                    <tr>
-                    <td class=head>1.3.10
-                    <td>Schedule preview implemented
+            <td class="head current">1.4.1
+                <td class=current>2017-2018 Update
                     <tr>
                     <td class=head>1.3.9
                     <td>Minor Visual Tweaks
