Getting ready for increment versioning

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,14 +8,17 @@
 <div>
     <table cellspacing=2>
         <tr>
-            <td class="head current">1.4.1
-                <td class=current>2017-2018 Update
+                    <td class="head current">1.4.3
+                    <td class=current>New gpa.js algorithm.
+                    <tr>
+                    <td class=head>1.4.1
+                    <td>Updated for 1-7 grade scale. Added old GPA for seniors.
                     <tr>
                     <td class=head>1.3.9
-                    <td>Minor Visual Tweaks
+                    <td>Minor visual tweaks.
                     <tr>
                     <td class=head>1.3.8
-                    <td>Added Percentages
+                    <td>Added percentages.
                     <tr>
                     <td class=head>1.3.7
                     <td>Minor usability tweaks.
@@ -27,7 +30,7 @@
                     <td>Fixing PS "Bold" Update.
                     <tr>
                     <td class=head>1.3.4
-                    <td>S2 Update.
+                    <td>S2 update.
                     <tr>
                     <td class=head>1.3.3
                     <td>Fix due to PS update.
@@ -39,7 +42,7 @@
                     <td>Fixed 2016-2017 GPA Calculation. Rewrote algorithm, made gpa.js more classy.
                     <tr>
                     <td class=head>1.2.5
-                    <td>2016-2017 S1 Update.
+                    <td>2016-2017 S1 update.
                     <tr>
                     <td class=head>1.2.3
                     <td>Fixed GPA calculation issues due to website update.
